cli/src/tui/snapshots/snapshot_loading.snap
---
source: src/tui/view.rs
expression: buffer_to_string(&terminal)
---
 Pool ──────────────────────────────────────────────────────
 loading...
 Disks ─────────────────────────────────────────────────────
 1  toshiba
 2  ironwolf
 3  wdc
press q to quit
