cli/src/tui/snapshots/snapshot_not_mounted.snap
---
source: src/tui/view.rs
assertion_line: 466
expression: buffer_to_string(&terminal)
---
Data  Encryption  Sharing
 Pool ──────────────────────────────────────────────────────
 not mounted
 Disks ─────────────────────────────────────────────────────
   #  Name     SMART    Usage
 ▶ 1  toshiba
   2  ironwolf
   3  wdc
press q to quit
