cli/src/tui/snapshots/snapshot_with_pool.snap
---
source: src/tui/view.rs
assertion_line: 521
expression: buffer_to_string(&terminal)
---
Data  Encryption  Sharing
 Pool ──────────────────────────────────────────────────────
 Path         /mnt/storage (healthy)
 Redundancy   2x (RAID1)
 Usage        39% (2.1 / 5.4 TiB)
 ███████████████████████
 Disks ─────────────────────────────────────────────────────
   #  Name       SMART    Use  Allocated
 ▶ 1  toshiba    ok       25%  1.3 / 5.5 TiB
   2  ironwolf   degraded 25%  1.3 / 5.5 TiB
   3  wdc        ?        21%  0.8 / 3.6 TiB
 Scrub ─────────────────────────────────────────────────────
 Last run     Tue Feb 24 02:00:07 2026 (11 min ago)
 Errors       0
 Total        32.36MiB
 Rate         32.34MiB/s
 Duration     0:00:00
press q to quit
